--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <nav>
                 <ul>
                     <li class="current"><a href="#home">Начало</a></li>
-                    <li><a href="#about">За нас</a></li>
-                    <li><a href="#services">Услуги</a></li>
-                    <li><a href="#contact">Контакти</a></li>
+                    <li><a href="./about.html">За нас</a></li>
+                    <li><a href="./services.html">Услуги</a></li>
+                    <li><a href="./contacts.html">Контакти</a></li>
                 </ul>
             </nav>
         </div>
