gallery and prices html and css

--- a/contacts.html
+++ b/contacts.html
@@ -20,6 +20,8 @@
                     <li><a href="./index.html">Начало</a></li>
                     <li><a href="./about.html">За нас</a></li>
                     <li><a href="./services.html">Услуги</a></li>
+                    <li><a href="./gallery.html">Галерия</a></li>
+                    <li><a href="./prices.html">Цени</a></li>
                     <li class="current"><a href="#contact">Контакти</a></li>
                 </ul>
             </nav>
