--- a/prices.html
+++ b/prices.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Парти Агенция - Вашето незабравимо събитие</title>
+    <title>Услуги - Парти Агенция</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -17,36 +17,48 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="#home">Начало</a></li>
+                    <li><a href="./index.html">Начало</a></li>
                     <li><a href="./about.html">За нас</a></li>
                     <li><a href="./services.html">Услуги</a></li>
                     <li><a href="./gallery.html">Галерия</a></li>
-                    <li><a href="./prices.html">Цени</a></li>
+                    <li class="current"><a href="#prices">Цени</a></li>
                     <li><a href="./contacts.html">Контакти</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <div class="wrapper">
-            <section id="welcome">
-                <div class="container">
-                    <h2>Добре дошли в нашата парти агенция!</h2>
-                    <p>Създаваме незабравими моменти за вас и вашите гости</p>
-                    <ul class="advantages">
-                        <li><i class="fas fa-check"></i> Професионален екип</li>
-                        <li><i class="fas fa-check"></i> Индивидуален подход</li>
-                        <li><i class="fas fa-check"></i> Широка гама услуги</li>
-                        <li><i class="fas fa-check"></i> Гарантирано качество</li>
-                    </ul>
-                </div>
-            </section>
-            <section class="image">
-                <img src="images/party-agency.png" alt="">
-            </section>
+        <div class="container-prices">
+            <h1>Цени на услугите</h1>
+            <table class="pricing-table">
+                <tr>
+                    <th>Услуга</th>
+                    <th>Описание</th>
+                    <th>Цена</th>
+                </tr>
+                <tr>
+                    <td>Рожден ден</td>
+                    <td>Пълна организация, украса, аниматор</td>
+                    <td>200 лв.</td>
+                </tr>
+                <tr>
+                    <td>Сватбено парти</td>
+                    <td>Декорация, кетъринг, DJ</td>
+                    <td>800 лв.</td>
+                </tr>
+                <tr>
+                    <td>Корпоративно събитие</td>
+                    <td>Зала, мултимедия, водещ</td>
+                    <td>1000 лв.</td>
+                </tr>
+                <tr>
+                    <td>Кетъринг</td>
+                    <td>Храни и напитки за 20 души</td>
+                    <td>300 лв.</td>
+                </tr>
+            </table>
         </div>
     </main>
-
     <footer>
         <div class="container">
             <p>&copy; 2023 Парти Агенция. Всички права запазени.</p>
