--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
                     <li><a href="index.html">Начало</a></li>
                     <li class="current"><a href="about.html">За нас</a></li>
                     <li><a href="services.html">Услуги</a></li>
+                    <li><a href="./gallery.html">Галерия</a></li>
+                    <li><a href="./prices.html">Цени</a></li>
                     <li><a href="contact.html">Контакти</a></li>
                 </ul>
             </nav>
