--- a/services.html
+++ b/services.html
@@ -20,6 +20,8 @@
                     <li><a href="./index.html">Начало</a></li>
                     <li><a href="./about.html">За нас</a></li>
                     <li class="current"><a href="#services">Услуги</a></li>
+                    <li><a href="./gallery.html">Галерия</a></li>
+                    <li><a href="./prices.html">Цени</a></li>
                     <li><a href="./contacts.html">Контакти</a></li>
                 </ul>
             </nav>
